fix: fix horizontal scrollbar

--- a/migration-to-ts/src/components/view/news/news.css
+++ b/migration-to-ts/src/components/view/news/news.css
@@ -250,6 +250,6 @@
     }
 
     .open-menu .news {
-        transform: translate(200px);
+        transform: translate(240px);
     }
 }
