--- a/migration-to-ts/src/components/view/sources/sources.css
+++ b/migration-to-ts/src/components/view/sources/sources.css
@@ -13,6 +13,12 @@
     cursor: pointer;
 }
 
+@media (max-width: 560px) {
+    .source__item {
+        font-size: 1.3rem;
+    }
+}
+
 .source__item-name {
     display: block;
     transform: scale(1);
